--- a/core/src/test/resources/application.properties
+++ b/core/src/test/resources/application.properties
@@ -1,5 +1,8 @@
 # TCP port
 server.port = 11111
+server.address = 127.0.0.1
 
 # disable Eureka
 eureka.client.enabled=false
+
+# logging.level.org.springframework=TRACE
