First working sender / receiver for WebSocket messages!!!!!!!

--- a/core/src/test/resources/application.properties
+++ b/core/src/test/resources/application.properties
@@ -5,5 +5,5 @@ server.address = 127.0.0.1
 # disable Eureka
 eureka.client.enabled=false
 
-logging.level.org.springframework=TRACE
-logging.level.com.tjazi=TRACE
+#logging.level.org.springframework=TRACE
+#logging.level.com.tjazi=TRACE
